Fix  86cw9vg4g : Values are only visible in the dark theme when the user switches back to it

--- a/FirstTerraceSystems/wwwroot/css/app.css
+++ b/FirstTerraceSystems/wwwroot/css/app.css
@@ -220,6 +220,7 @@ h1:focus {
     padding: 50px;
     text-align: center;
     border-radius: 20px 0 0 20px;
+    height: 720px;
 }
 
 .signIn > * {
